--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "devicon": "^2.2.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-mailto": "^0.4.0",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
