--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "devicon": "^2.2.0",
     "font-awesome": "^4.7.0",
+    "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
